samples/_failures_safe/1761722865_4b2524_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0955df9.c: In function ‘execute_state_action’:
./samples/SAFE/__tmp_e0955df9.c:155:9: error: expected declaration or statement at end of input
  155 |         case STATE_ERROR:
      |         ^~~~
./samples/SAFE/__tmp_e0955df9.c:155:9: error: expected declaration or statement at end of input
